chore: migrate getScore to nestjs
fix formatting

review

fix test

fixes

fixes

fix tests

--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -101,7 +101,10 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": [
+      ".*\\.spec\\.ts$",
+      "test\\.ts"
+    ],
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
@@ -112,7 +115,8 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@entities(.*)$": "<rootDir>/../../server/src/models/$1"
-    }
+    },
+    "clearMocks": true
   },
   "jest-junit": {
     "outputDirectory": "../reports",
