fix: fix naming according to convention

--- a/nestjs/.env.example
+++ b/nestjs/.env.example
@@ -1,6 +1,6 @@
 TZ=utc
 
-RSSCHOOL_HOST=http://localhost:3000
+RSSHCOOL_HOST=http://localhost:3000
 
 RSSHCOOL_PG_HOST=localhost
 RSSHCOOL_PG_USERNAME=rs_master
