ci: add variable to container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
     ports:
       - 8082:8080
     environment:
+      RSSCHOOL_HOST: ${RS_HOST}
       RSSHCOOL_PG_HOST: ${RSSHCOOL_API_PG_HOST}
       RSSHCOOL_PG_USERNAME: ${RSSHCOOL_API_PG_USERNAME}
       RSSHCOOL_PG_PASSWORD: ${RSSHCOOL_API_PG_PASSWORD}
