--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       RSSHCOOL_PG_PASSWORD: ${RSSHCOOL_API_PG_PASSWORD}
       RSSHCOOL_PG_DATABASE: ${RSSHCOOL_API_PG_DATABASE}
       RSSHCOOL_USERS_ADMINS: 'apalchys,dzmitry-varabei,mikhama,sonejka,aaliakseyenka'
+      RSSHCOOL_USERS_HIRERS: ${RSSHCOOL_USERS_HIRERS}
       RSSHCOOL_AUTH_GITHUB_CALLBACK: ${RSSHCOOL_API_AUTH_CALLBACK}
       RSSHCOOL_AUTH_GITHUB_CLIENT_ID: ${RSSHCOOL_API_AUTH_CLIENT_ID}
       RSSHCOOL_AUTH_GITHUB_CLIENT_SECRET: ${RSSHCOOL_API_AUTH_CLIENT_SECRET}
