chore: workflow permissions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,10 @@ on:
     paths-ignore:
       - 'tools/bumblebee/**'
 
+permissions:
+  id-token: write
+  contents: read
+
 concurrency:
   group: deploy
   cancel-in-progress: true
