Revert "chore: migrate getScore to nestjs (#1410)"
This reverts commit 935f10dad3e7b30afb7b3edbe8a713a8f46c2584.

--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -101,10 +101,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": [
-      ".*\\.spec\\.ts$",
-      "test\\.ts"
-    ],
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
@@ -115,8 +112,7 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@entities(.*)$": "<rootDir>/../../server/src/models/$1"
-    },
-    "clearMocks": true
+    }
   },
   "jest-junit": {
     "outputDirectory": "../reports",
