--- a/client/package.json
+++ b/client/package.json
@@ -46,23 +46,22 @@
   },
   "devDependencies": {
     "@playwright/test": "1.22.2",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "12.1.5",
     "@types/aws-lambda": "8.10.98",
     "@types/cookie": "0.5.1",
-    "@types/enzyme": "3.10.12",
-    "@types/jest": "28.1.0",
+    "@types/jest": "28.1.5",
     "@types/lodash": "4.14.182",
-    "@types/node": "16.11.25",
+    "@types/node": "16",
     "@types/react": "17.0.39",
     "@types/react-color": "2.17.6",
     "@types/react-dom": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "5.27.0",
-    "@typescript-eslint/parser": "5.27.0",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
     "dotenv": "16.0.1",
-    "eslint": "8.9.0",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
-    "jest-junit": "13.2.0",
+    "eslint": "8.19.0",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "jest-junit": "14.0.0",
     "typescript": "4.7.4"
   },
   "nextBundleAnalysis": {
