fix: update nginx config

--- a/setup/nginx/nginx.conf
+++ b/setup/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
     text/html                  epoch;
     text/css                   max;
     application/javascript     max;
-    ~image/                    max;
+    ~image/                    1d;
   }
 
   upstream client_target {
