--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "@playwright/test": "1.22.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.5",
     "@types/aws-lambda": "8.10.92",
     "@types/cookie": "0.4.1",
     "@types/enzyme": "3.10.11",
