--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,10 @@
   "browserslist": [
     "> 1%"
   ],
+  "engines": {
+    "node": ">=16",
+    "npm": ">=8"
+  },
   "scripts": {
     "start": "next dev",
     "build": "next build",
@@ -21,13 +25,13 @@
   "dependencies": {
     "@ant-design/charts": "1.2.14",
     "@apalchys/next-aws-lambda": "3.6.7",
-    "antd": "4.19.3",
-    "axios": "0.26.1",
-    "cookie": "0.4.2",
+    "antd": "4.21.6",
+    "axios": "0.27.2",
+    "cookie": "0.5.0",
     "csvtojson": "2.0.10",
     "lodash": "4.17.21",
     "mobile-device-detect": "0.4.3",
-    "moment": "2.29.2",
+    "moment": "2.29.4",
     "moment-timezone": "0.5.34",
     "next": "12.1.1",
     "react": "17.0.2",
@@ -35,35 +39,31 @@
     "react-dom": "17.0.2",
     "react-markdown": "6.0.2",
     "react-masonry-css": "1.0.16",
-    "react-use": "17.3.2",
+    "react-use": "17.4.0",
     "remark-gfm": "1.0.0",
-    "styled-jsx": "5.0.1",
-    "use-places-autocomplete": "1.11.0"
+    "styled-jsx": "5.0.2",
+    "use-places-autocomplete": "3.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "1.22.0",
-    "@testing-library/jest-dom": "5.16.4",
+    "@playwright/test": "1.25.0",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
-    "@types/aws-lambda": "8.10.92",
-    "@types/cookie": "0.4.1",
-    "@types/enzyme": "3.10.11",
-    "@types/jest": "27.4.1",
-    "@types/lodash": "4.14.178",
-    "@types/node": "16.11.25",
+    "@types/aws-lambda": "8.10.102",
+    "@types/cookie": "0.5.1",
+    "@types/jest": "28.1.6",
+    "@types/lodash": "4.14.182",
+    "@types/node": "16",
     "@types/react": "17.0.39",
     "@types/react-color": "2.17.6",
     "@types/react-dom": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "5.14.0",
-    "@typescript-eslint/parser": "5.14.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
-    "dotenv": "16.0.0",
-    "enzyme": "3.11.0",
-    "enzyme-to-json": "3.6.2",
-    "eslint": "8.9.0",
-    "jest": "27.5.1",
-    "jest-junit": "13.0.0",
-    "ts-jest": "27.1.4",
-    "typescript": "4.6.3"
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "5.33.0",
+    "dotenv": "16.0.1",
+    "eslint": "8.22.0",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "jest-junit": "14.0.0",
+    "typescript": "4.7.4"
   },
   "nextBundleAnalysis": {
     "budget": 512000,
