--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -70,29 +70,29 @@
     "@types/cache-manager": "3.4.2",
     "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.13",
-    "@types/jest": "27.4.0",
+    "@types/jest": "28.1.7",
     "@types/jsonwebtoken": "8.5.8",
     "@types/lodash": "4.14.178",
-    "@types/node": "16.11.25",
+    "@types/node": "^16",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
     "@types/passport-jwt": "3.0.6",
-    "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "5.16.0",
-    "@typescript-eslint/parser": "5.16.0",
-    "eslint": "8.12.0",
+    "@types/supertest": "2.0.12",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "jest": "27.5.1",
-    "jest-junit": "13.0.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "28.1.3",
+    "jest-junit": "14.0.0",
     "pino-pretty": "7.6.0",
-    "prettier": "2.6.1",
-    "supertest": "6.2.2",
-    "ts-jest": "27.1.4",
-    "ts-loader": "9.2.8",
-    "ts-node": "10.7.0",
-    "tsconfig-paths": "3.14.1",
-    "typescript": "4.6.3"
+    "prettier": "2.7.1",
+    "supertest": "6.2.4",
+    "ts-jest": "28.0.8",
+    "ts-loader": "9.3.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.0",
+    "typescript": "4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
