--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "start": "tsnd --ignore-watch node_modules --inspect --notify false -r dotenv/config -r tsconfig-paths/register -- ./src/index.ts | pino-pretty -i time,hostname,pid,host,method,remoteAddress",
+    "start": "tsnd --ignore-watch node_modules --inspect --notify false -r dotenv/config -- ./src/index.ts | pino-pretty -i time,hostname,pid,host,method,remoteAddress",
     "lint": "eslint src",
     "test": "jest",
     "test:ci": "jest --ci --reporters=default --reporters=jest-junit",
@@ -19,7 +19,7 @@
     "@koa/router": "8.0.8",
     "@vendia/serverless-express": "4.5.3",
     "aws-sdk": "2.1022.0",
-    "axios": "0.24.0",
+    "axios": "0.27.2",
     "dotenv": "10.0.0",
     "http-status-codes": "2.1.4",
     "ics": "2.31.0",
@@ -29,12 +29,12 @@
     "koa-basic-auth": "4.0.0",
     "koa-bodyparser": "4.2.1",
     "koa-jwt": "3.6.0",
-    "koa-passport": "4.1.3",
+    "koa-passport": "5.0.0",
     "koa-session": "5.13.1",
     "koa-static": "5.0.0",
     "lodash": "4.17.21",
     "luxon": "2.3.0",
-    "moment-timezone": "0.5.33",
+    "moment-timezone": "0.5.34",
     "node-cache": "5.1.2",
     "node-schedule": "2.0.0",
     "octokit": "1.7.1",
@@ -46,7 +46,7 @@
     "typeorm": "0.3.7"
   },
   "devDependencies": {
-    "@types/jest": "27.4.0",
+    "@types/jest": "28.1.7",
     "@types/json2csv": "5.0.3",
     "@types/jsonwebtoken": "8.5.8",
     "@types/koa": "2.11.3",
@@ -54,7 +54,7 @@
     "@types/koa__router": "8.0.2",
     "@types/koa-basic-auth": "2.0.4",
     "@types/koa-bodyparser": "4.2.0",
-    "@types/koa-passport": "4.0.2",
+    "@types/koa-passport": "4.0.3",
     "@types/koa-session": "5.10.2",
     "@types/koa-static": "4.0.2",
     "@types/lodash": "4.14.178",
@@ -64,17 +64,17 @@
     "@types/passport-github2": "1.2.5",
     "@types/pg": "8.6.4",
     "@types/pino-multi-stream": "3.1.2",
-    "@typescript-eslint/eslint-plugin": "5.4.0",
-    "@typescript-eslint/parser": "5.4.0",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
     "cross-env": "7.0.3",
-    "eslint": "8.3.0",
-    "jest": "27.5.1",
+    "eslint": "8.22.0",
+    "jest": "28.1.3",
     "jest-junit": "13.0.0",
     "pino-pretty": "7.5.1",
-    "ts-jest": "27.1.3",
+    "ts-jest": "28.0.8",
     "ts-node-dev": "2.0.0",
     "ts-node": "10.9.1",
-    "tsconfig-paths": "3.11.0",
+    "tsconfig-paths": "4.1.0",
     "typescript": "4.3.5"
   },
   "jest-junit": {
