--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,9 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@ant-design/charts": "1.2.14",
+    "@ant-design/plots": "1.2.1",
     "@apalchys/next-aws-lambda": "3.6.7",
-    "antd": "4.21.6",
+    "antd": "4.22.7",
     "axios": "0.27.2",
     "cookie": "0.5.0",
     "csvtojson": "2.0.10",
