--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -9,8 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start --watch",
-    "start:dev": "nest start --watch",
+    "start": "nest start --watch | pino-pretty -i time,remoteAddress,req,reqId",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint src",
@@ -27,53 +26,53 @@
   "dependencies": {
     "@apalchys/pino-cloudwatch": "0.8.6",
     "@nestjs/axios": "0.1.0",
-    "@nestjs/common": "8.4.7",
+    "@nestjs/common": "9.0.11",
     "@nestjs/config": "2.2.0",
-    "@nestjs/core": "8.4.7",
-    "@nestjs/mapped-types": "1.0.1",
-    "@nestjs/passport": "8.2.2",
-    "@nestjs/schedule": "1.1.0",
-    "@nestjs/platform-express": "8.4.7",
-    "@nestjs/swagger": "5.2.1",
-    "@nestjs/typeorm": "8.1.4",
-    "@vendia/serverless-express": "4.5.3",
-    "cache-manager": "3.6.3",
+    "@nestjs/core": "9.0.11",
+    "@nestjs/mapped-types": "1.1.0",
+    "@nestjs/passport": "9.0.0",
+    "@nestjs/schedule": "2.1.0",
+    "@nestjs/platform-express": "9.0.11",
+    "@nestjs/swagger": "6.0.5",
+    "@nestjs/typeorm": "9.0.1",
+    "@vendia/serverless-express": "4.10.1",
+    "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cookie-parser": "1.4.6",
     "dayjs": "1.11.5",
     "dotenv": "16.0.1",
-    "express": "4.17.3",
+    "express": "4.18.1",
     "handlebars": "4.7.7",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
-    "nestjs-pino": "2.5.0",
+    "nestjs-pino": "3.1.1",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
     "passport-http": "0.3.0",
     "passport-jwt": "4.0.0",
     "pg": "8.7.3",
-    "pino-http": "6.6.0",
+    "pino-http": "8.2.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
-    "swagger-ui-express": "4.3.0",
+    "swagger-ui-express": "4.5.0",
     "typeorm": "0.3.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "8.2.8",
-    "@nestjs/schematics": "8.0.8",
-    "@nestjs/testing": "8.4.7",
+    "@nestjs/cli": "9.0.0",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.11",
     "@openapitools/openapi-generator-cli": "2.5.1",
-    "@types/cache-manager": "3.4.2",
-    "@types/cookie-parser": "1.4.2",
+    "@types/cache-manager": "4.0.1",
+    "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.7",
     "@types/jsonwebtoken": "8.5.8",
-    "@types/lodash": "4.14.178",
-    "@types/node": "^16",
+    "@types/lodash": "4.14.184",
+    "@types/node": "16.11.25",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
     "@types/passport-jwt": "3.0.6",
