chore: change env variable names for API Gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,9 @@ services:
       RSSHCOOL_API_HIRERS: ${RSSHCOOL_API_HIRERS}
       RSSHCOOL_API_AWS_SECRET_ACCESS_KEY: ${RSSHCOOL_API_AWS_SECRET_ACCESS_KEY}
       RSSHCOOL_API_AWS_ACCESS_KEY_ID: ${RSSHCOOL_API_AWS_ACCESS_KEY_ID}
-      RSSHCOOL_API_AWS_REGION: ${RSSHCOOL_API_AWS_REGION}
-      RSSHCOOL_API_AWS_REST_API_URL: ${RSSHCOOL_API_AWS_TASK_API_URL}
-      RSSHCOOL_API_AWS_REST_API_KEY: ${RSSHCOOL_API_AWS_TASK_API_KEY}
+      RSSHCOOL_API_AWS_REGION: ${RSSHCOOL_AWS_REGION}
+      RSSHCOOL_API_AWS_REST_API_URL: ${RSSHCOOL_AWS_REST_API_URL}
+      RSSHCOOL_API_AWS_REST_API_KEY: ${RSSHCOOL_AWS_REST_API_KEY}
       RSSHCOOL_API_GITHUB_APP_ID: ${RSSHCOOL_API_GITHUB_APP_ID}
       RSSHCOOL_API_GITHUB_APP_INSTALL_ID: ${RSSHCOOL_API_GITHUB_APP_INSTALL_ID}
       RSSHCOOL_API_GITHUB_PRIVATE_KEY: ${RSSHCOOL_API_GITHUB_PRIVATE_KEY}
@@ -69,9 +69,9 @@ services:
       RSSHCOOL_AUTH_JWT_SECRET_KEY: ${RSSHCOOL_API_SESSION_KEY}
       RSSHCOOL_AWS_SECRET_ACCESS_KEY: ${RSSHCOOL_API_AWS_SECRET_ACCESS_KEY}
       RSSHCOOL_AWS_ACCESS_KEY_ID: ${RSSHCOOL_API_AWS_ACCESS_KEY_ID}
-      RSSHCOOL_AWS_REGION: ${RSSHCOOL_API_AWS_REGION}
-      RSSHCOOL_AWS_REST_API_URL: ${RSSHCOOL_API_AWS_TASK_API_URL}
-      RSSHCOOL_AWS_REST_API_KEY: ${RSSHCOOL_API_AWS_TASK_API_KEY}
+      RSSHCOOL_AWS_REGION: ${RSSHCOOL_AWS_REGION}
+      RSSHCOOL_AWS_REST_API_URL: ${RSSHCOOL_AWS_REST_API_URL}
+      RSSHCOOL_AWS_REST_API_KEY: ${RSSHCOOL_AWS_REST_API_KEY}
       RSSHCOOL_USERS_CLOUD_USERNAME: ${RSSHCOOL_USERS_CLOUD_USERNAME}
       RSSHCOOL_USERS_CLOUD_PASSWORD: ${RSSHCOOL_USERS_CLOUD_PASSWORD}
     restart: on-failure
