--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -31,8 +31,8 @@
     "@nestjs/core": "9.0.11",
     "@nestjs/mapped-types": "1.1.0",
     "@nestjs/passport": "9.0.0",
-    "@nestjs/schedule": "2.1.0",
     "@nestjs/platform-express": "9.0.11",
+    "@nestjs/schedule": "2.1.0",
     "@nestjs/swagger": "6.0.5",
     "@nestjs/typeorm": "9.0.1",
     "@vendia/serverless-express": "4.10.1",
@@ -46,6 +46,7 @@
     "handlebars": "4.7.7",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
+    "luxon": "3.0.2",
     "nanoid": "3.3.4",
     "nestjs-pino": "3.1.1",
     "passport": "0.6.0",
@@ -72,6 +73,7 @@
     "@types/jest": "28.1.7",
     "@types/jsonwebtoken": "8.5.8",
     "@types/lodash": "4.14.184",
+    "@types/luxon": "3.0.0",
     "@types/node": "16.11.52",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
