feat: give access to edit course to course managers

--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start --watch | pino-pretty -i time,remoteAddress,req,reqId",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -19,8 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "openapi": "npm run openapi:spec && npm run openapi:sdk",
+    "openapi": "npm run openapi:spec && npm run openapi:sdk && npm run openapi:format",
     "openapi:spec": "ts-node --project tsconfig.json ./src/openapi-spec.ts",
+    "openapi:format": "prettier --write src/spec.json",
     "openapi:sdk": "npx openapi-generator-cli generate -i ./src/spec.json -g typescript-axios -o ../client/src/api --additional-properties=supportsES6=true"
   },
   "dependencies": {
