--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -31,8 +31,8 @@
     "@nestjs/core": "9.0.11",
     "@nestjs/mapped-types": "1.1.0",
     "@nestjs/passport": "9.0.0",
-    "@nestjs/schedule": "2.1.0",
     "@nestjs/platform-express": "9.0.11",
+    "@nestjs/schedule": "2.1.0",
     "@nestjs/swagger": "6.0.5",
     "@nestjs/typeorm": "9.0.1",
     "@vendia/serverless-express": "4.10.1",
@@ -44,6 +44,7 @@
     "dotenv": "16.0.1",
     "express": "4.18.1",
     "handlebars": "4.7.7",
+    "ical-generator": "3.5.1",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
