--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "next dev",
     "build": "next build",
-    "build:lambda": "tsc --skipLibCheck --module commonjs --target es2018 --outDir dist lambda/app.ts",
+    "build:lambda": "tsc --esModuleInterop --skipLibCheck --module commonjs --target es2018 --outDir dist lambda/app.ts",
     "ci:build": "tsc",
     "prod": "next start -p 8080",
     "lint": "eslint src",
@@ -23,9 +23,8 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@ant-design/plots": "1.2.1",
-    "@apalchys/next-aws-lambda": "3.6.7",
-    "antd": "4.22.7",
+    "@ant-design/plots": "1.2.2",
+    "antd": "4.23.0",
     "axios": "0.27.2",
     "cookie": "0.5.0",
     "csvtojson": "2.0.10",
@@ -33,7 +32,7 @@
     "mobile-device-detect": "0.4.3",
     "moment": "2.29.4",
     "moment-timezone": "0.5.35",
-    "next": "12.1.1",
+    "next": "12.3.0",
     "react": "17.0.2",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
@@ -41,7 +40,8 @@
     "react-masonry-css": "1.0.16",
     "react-use": "17.4.0",
     "remark-gfm": "1.0.0",
-    "styled-jsx": "5.0.2",
+    "serverless-http": "3.0.2",
+    "styled-jsx": "5.0.6",
     "use-places-autocomplete": "3.0.0"
   },
   "devDependencies": {
@@ -56,14 +56,14 @@
     "@types/react": "17.0.39",
     "@types/react-color": "2.17.6",
     "@types/react-dom": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "5.33.0",
-    "@typescript-eslint/parser": "5.33.0",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
     "dotenv": "16.0.1",
     "eslint": "8.22.0",
     "jest": "29.0.2",
     "jest-environment-jsdom": "29.0.2",
     "jest-junit": "14.0.0",
-    "typescript": "4.7.4"
+    "typescript": "4.8.3"
   },
   "nextBundleAnalysis": {
     "budget": 512000,
