--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "next dev",
     "build": "next build",
-    "build:lambda": "tsc --skipLibCheck --module commonjs --target es2018 --outDir dist lambda/app.ts",
+    "build:lambda": "tsc --esModuleInterop --skipLibCheck --module commonjs --target es2018 --outDir dist lambda/app.ts",
     "ci:build": "tsc",
     "prod": "next start -p 8080",
     "lint": "eslint src",
@@ -23,32 +23,32 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@ant-design/plots": "1.2.1",
-    "@apalchys/next-aws-lambda": "3.6.7",
-    "antd": "4.22.7",
+    "@ant-design/plots": "1.2.2",
+    "antd": "4.23.1",
     "axios": "0.27.2",
     "cookie": "0.5.0",
     "csvtojson": "2.0.10",
     "lodash": "4.17.21",
-    "mobile-device-detect": "0.4.3",
     "moment": "2.29.4",
-    "moment-timezone": "0.5.35",
-    "next": "12.1.1",
+    "moment-timezone": "0.5.37",
+    "next": "12.3.0",
     "react": "17.0.2",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
-    "react-markdown": "6.0.2",
+    "react-markdown": "8.0.3",
     "react-masonry-css": "1.0.16",
     "react-use": "17.4.0",
-    "remark-gfm": "1.0.0",
-    "styled-jsx": "5.0.2",
+    "remark-gfm": "3.0.1",
+    "serverless-http": "3.0.2",
+    "styled-jsx": "5.0.7",
     "use-places-autocomplete": "3.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "1.25.0",
+    "@next/eslint-plugin-next": "^12.3.0",
+    "@playwright/test": "1.25.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
-    "@types/aws-lambda": "8.10.102",
+    "@types/aws-lambda": "8.10.103",
     "@types/cookie": "0.5.1",
     "@types/jest": "29.0.0",
     "@types/lodash": "4.14.184",
@@ -56,14 +56,14 @@
     "@types/react": "17.0.39",
     "@types/react-color": "2.17.6",
     "@types/react-dom": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "5.33.0",
-    "@typescript-eslint/parser": "5.33.0",
-    "dotenv": "16.0.1",
-    "eslint": "8.22.0",
-    "jest": "29.0.2",
-    "jest-environment-jsdom": "29.0.2",
-    "jest-junit": "14.0.0",
-    "typescript": "4.7.4"
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "dotenv": "16.0.2",
+    "eslint": "8.23.0",
+    "jest": "29.0.3",
+    "jest-environment-jsdom": "29.0.3",
+    "jest-junit": "14.0.1",
+    "typescript": "4.8.3"
   },
   "nextBundleAnalysis": {
     "budget": 512000,
