--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,18 +5,16 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "strictPropertyInitialization": false,
     "allowJs": true,
     "declaration": false,
     "isolatedModules": true,
     "jsx": "preserve",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
@@ -27,6 +25,6 @@
     },
     "incremental": true
   },
-  "include": ["./next-env.d.ts", "./src/**/*.ts", "./src/**/*.tsx"],
+  "include": ["./next-env.d.ts", "./lambda/**/*.ts", "./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": ["./node_modules"]
 }
