fix: nginx config

--- a/setup/nginx/nginx.conf
+++ b/setup/nginx/nginx.conf
@@ -109,7 +109,7 @@ http {
     }
 
     location / {
-      proxy_set_header x-domain app.rs.school
+      proxy_set_header x-domain app;
       proxy_pass http://client_target;
     }
   }
@@ -117,8 +117,8 @@ http {
 
   server {
     listen 443 ssl http2;
-    ssl_certificate /etc/letsencrypt/live/app.rs.school/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/app.rs.school/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/jobs.rs.school/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jobs.rs.school/privkey.pem;
 
     server_name jobs.rs.school;
 
@@ -164,7 +164,7 @@ http {
     }
 
     location / {
-      proxy_set_header x-domain jobs.rs.school
+      proxy_set_header x-domain jobs;
       proxy_pass http://client_target;
     }
   }
