chore: update nginx config

--- a/setup/nginx/nginx.conf
+++ b/setup/nginx/nginx.conf
@@ -117,10 +117,10 @@ http {
 
   server {
     listen 443 ssl http2;
-    ssl_certificate /etc/letsencrypt/live/jobs.rs.school/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/jobs.rs.school/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/job.rs.school/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/job.rs.school/privkey.pem;
 
-    server_name jobs.rs.school;
+    server_name job.rs.school;
 
     keepalive_timeout 300;
 
@@ -164,7 +164,7 @@ http {
     }
 
     location / {
-      proxy_set_header x-domain jobs;
+      proxy_set_header x-domain job;
       proxy_pass http://client_target;
     }
   }
