feat: update .env.example

--- a/tools/sloths/.env.example
+++ b/tools/sloths/.env.example
@@ -1,3 +1,4 @@
 VITE_BFF_URL=http://localhost:3000
-VITE_JSON_URL=http://localhost:5173/cdn/metadata.json
 VITE_CDN_URL=http://localhost:5173/cdn
+VITE_STICKERS_JSON_URL=http://localhost:5173/cdn/stickers/metadata.json
+VITE_CLEANED_JSON_URL=http://localhost:5173/cdn/cleaned/filelist.json
