--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -47,6 +47,7 @@
     "ical-generator": "3.5.1",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
+    "luxon": "3.0.3",
     "nanoid": "3.3.4",
     "nestjs-pino": "3.1.1",
     "passport": "0.6.0",
@@ -73,6 +74,7 @@
     "@types/jest": "29.0.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/lodash": "4.14.184",
+    "@types/luxon": "^3.0.1",
     "@types/node": "16.11.52",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
