fix: url to stickers on load and download

--- a/tools/sloths/.env.example
+++ b/tools/sloths/.env.example
@@ -1,4 +1,5 @@
 VITE_BFF_URL=http://localhost:3000
-VITE_CDN_URL=http://localhost:5173/cdn
+VITE_CDN_STICKERS_URL=http://localhost:5173/cdn/stickers
+VITE_CDN_CLEANED_URL=http://localhost:5173/cdn/cleaned
 VITE_STICKERS_JSON_URL=http://localhost:5173/cdn/stickers/metadata.json
 VITE_CLEANED_JSON_URL=http://localhost:5173/cdn/cleaned/filelist.json
