--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "@playwright/test": "1.25.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "8.0.1",
     "@types/aws-lambda": "8.10.103",
     "@types/cookie": "0.5.1",
     "@types/jest": "29.0.0",
