--- a/tools/sloths/package.json
+++ b/tools/sloths/package.json
@@ -21,38 +21,38 @@
     ]
   },
   "dependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
-    "eslint-import-resolver-typescript": "^3.5.0",
-    "file-saver": "^2.0.5",
-    "jszip": "^3.10.1",
-    "normalize.css": "^8.0.1",
-    "pinia": "^2.0.17",
-    "vue": "^3.2.37",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.3",
-    "vue-three-shortkey": "^4.0.1"
+    "@intlify/vite-plugin-vue-i18n": "6.0.1",
+    "eslint-import-resolver-typescript": "3.5.0",
+    "file-saver": "2.0.5",
+    "jszip": "3.10.1",
+    "normalize.css": "8.0.1",
+    "pinia": "2.0.17",
+    "vue": "3.2.37",
+    "vue-i18n": "9.2.2",
+    "vue-router": "4.1.3",
+    "vue-three-shortkey": "4.0.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "^16.11.47",
-    "@typescript-eslint/parser": "^5.33.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.21.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-airbnb-typescript-vue": "^3.0.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "lint-staged": "^13.0.3",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.4",
-    "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "^0.39.5"
+    "@rushstack/eslint-patch": "1.1.4",
+    "@types/file-saver": "2.0.5",
+    "@types/node": "16.11.47",
+    "@typescript-eslint/parser": "5.33.0",
+    "@vitejs/plugin-vue": "3.0.1",
+    "@vue/eslint-config-airbnb": "6.0.0",
+    "@vue/eslint-config-prettier": "7.0.0",
+    "@vue/eslint-config-typescript": "11.0.0",
+    "@vue/tsconfig": "0.1.3",
+    "eslint": "8.21.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-airbnb-typescript-vue": "3.0.0",
+    "eslint-plugin-vue": "9.3.0",
+    "lint-staged": "13.0.3",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.7.1",
+    "typescript": "4.7.4",
+    "vite": "3.0.4",
+    "vue-eslint-parser": "9.0.3",
+    "vue-tsc": "0.39.5"
   }
 }
