--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "17.0.2",
     "react-markdown": "8.0.3",
     "react-masonry-css": "1.0.16",
+    "react-sortable-hoc": "^2.0.0",
     "react-use": "17.4.0",
     "remark-gfm": "3.0.1",
     "serverless-http": "3.0.2",
