--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "jest": "29.0.3",
     "jest-environment-jsdom": "29.0.3",
     "jest-junit": "14.0.1",
+    "jest-mock-axios": "^4.7.0-beta",
     "typescript": "4.8.3"
   },
   "nextBundleAnalysis": {
