--- a/.github/workflows/deploy-sloths.yaml
+++ b/.github/workflows/deploy-sloths.yaml
@@ -25,16 +25,22 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          node-version: '16'
 
       - name: Restore npm cache
         uses: actions/cache@v2
         env:
           cache-name: cache-npm
         with:
+          node-version: '16'
           path: ~/.npm
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build
         run: npm run build-only
