fix: deploy yaml

--- a/.github/workflows/deploy-sloths.yaml
+++ b/.github/workflows/deploy-sloths.yaml
@@ -49,6 +49,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
           AWS_DEFAULT_REGION: eu-central-1
-        run:
-          - aws s3 cp dist s3://sloths.rs.school/ --recursive --cache-control "public,max-age=15552000,immutable"
-          - aws s3 cp public s3://sloths.rs.school/ --recursive --cache-control "public,max-age=15552000,immutable"
+        run: |
+          aws s3 cp dist s3://sloths.rs.school/ --recursive --cache-control "public,max-age=15552000,immutable"
