fix: add test libraries

--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/aws-lambda": "8.10.103",
     "@types/cookie": "0.5.1",
     "@types/jest": "29.0.0",
