--- a/client/package.json
+++ b/client/package.json
@@ -24,20 +24,19 @@
   },
   "dependencies": {
     "@ant-design/plots": "1.2.2",
-    "antd": "4.23.1",
+    "antd": "5.0.7",
     "axios": "0.27.2",
     "cookie": "0.5.0",
     "csvtojson": "2.0.10",
     "lodash": "4.17.21",
     "moment": "2.29.4",
     "moment-timezone": "0.5.37",
-    "next": "12.3.0",
-    "react": "17.0.2",
+    "next": "13.0.7",
+    "react": "18.2.0",
     "react-color": "2.19.3",
-    "react-dom": "17.0.2",
-    "react-markdown": "8.0.3",
+    "react-dom": "18.2.0",
+    "react-markdown": "8.0.4",
     "react-masonry-css": "1.0.16",
-    "react-sortable-hoc": "^2.0.0",
     "react-use": "17.4.0",
     "remark-gfm": "3.0.1",
     "serverless-http": "3.0.2",
@@ -45,34 +44,31 @@
     "use-places-autocomplete": "3.0.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.3.0",
+    "@next/eslint-plugin-next": "13.0.7",
     "@playwright/test": "1.25.2",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "12.1.5",
-    "@testing-library/react-hooks": "8.0.1",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/aws-lambda": "8.10.103",
     "@types/cookie": "0.5.1",
     "@types/jest": "29.0.0",
     "@types/lodash": "4.14.184",
     "@types/node": "16.11.52",
-    "@types/react": "17.0.39",
+    "@types/react": "18.0.26",
     "@types/react-color": "2.17.6",
-    "@types/react-dom": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "dotenv": "16.0.2",
-    "eslint": "8.23.0",
-    "eslint-plugin-jest": "^27.0.4",
-    "eslint-plugin-jest-dom": "^4.0.2",
-    "eslint-plugin-react": "^7.32.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.6.4",
+    "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "5.46.1",
+    "@typescript-eslint/parser": "5.46.1",
+    "dotenv": "16.0.3",
+    "eslint": "8.30.0",
+    "eslint-plugin-jest": "27.1.7",
+    "eslint-plugin-jest-dom": "4.0.3",
+    "eslint-plugin-testing-library": "5.9.1",
     "jest": "29.0.3",
     "jest-environment-jsdom": "29.0.3",
     "jest-junit": "14.0.1",
     "jest-mock-axios": "^4.7.0-beta",
-    "mq-polyfill": "^1.1.8",
+    "mq-polyfill": "1.1.8",
     "typescript": "4.8.3"
   },
   "nextBundleAnalysis": {
