chore: update dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -39,8 +39,8 @@
     "react-masonry-css": "1.0.16",
     "react-use": "17.4.0",
     "remark-gfm": "3.0.1",
-    "serverless-http": "3.0.2",
-    "styled-jsx": "5.0.7",
+    "serverless-http": "3.1.0",
+    "styled-jsx": "5.1.1",
     "use-places-autocomplete": "3.0.0"
   },
   "devDependencies": {
@@ -49,11 +49,11 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/aws-lambda": "8.10.103",
+    "@types/aws-lambda": "8.10.109",
     "@types/cookie": "0.5.1",
-    "@types/jest": "29.0.0",
-    "@types/lodash": "4.14.184",
-    "@types/node": "16.11.52",
+    "@types/jest": "29.2.4",
+    "@types/lodash": "4.14.191",
+    "@types/node": "^16",
     "@types/react": "18.0.26",
     "@types/react-color": "2.17.6",
     "@types/react-dom": "18.0.9",
@@ -64,12 +64,12 @@
     "eslint-plugin-jest": "27.1.7",
     "eslint-plugin-jest-dom": "4.0.3",
     "eslint-plugin-testing-library": "5.9.1",
-    "jest": "29.0.3",
-    "jest-environment-jsdom": "29.0.3",
-    "jest-junit": "14.0.1",
-    "jest-mock-axios": "^4.7.0-beta",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "jest-junit": "15.0.0",
+    "jest-mock-axios": "4.7.0-beta2",
     "mq-polyfill": "1.1.8",
-    "typescript": "4.8.3"
+    "typescript": "4.9.4"
   },
   "nextBundleAnalysis": {
     "budget": 512000,
