--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -188,8 +188,10 @@ jobs:
       #       ${{ runner.os }}-single-buildx
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
+        with:
+          platforms: linux/amd64
 
       - name: Login to ECR
         uses: docker/login-action@v1
