--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -241,6 +241,7 @@ jobs:
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
           platforms: linux/amd64
+          provenance: false
           context: ./client
           file: ./client/Dockerfile.lambda
           push: true
@@ -265,6 +266,7 @@ jobs:
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
           platforms: linux/amd64
+          provenance: false
           context: ./server
           file: ./server/Dockerfile.lambda
           push: true
@@ -289,6 +291,7 @@ jobs:
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
           platforms: linux/amd64
+          provenance: false
           context: ./nestjs
           file: ./nestjs/Dockerfile.lambda
           push: true
