--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,8 @@
     "eslint": "8.23.0",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.6.4",
     "jest": "29.0.3",
     "jest-environment-jsdom": "29.0.3",
