--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -188,8 +188,10 @@ jobs:
             ${{ runner.os }}-single-buildx
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
+        with:
+          platforms: linux/amd64
 
       - name: Login to ECR
         uses: docker/login-action@v1
@@ -235,9 +237,11 @@ jobs:
         run: npm run build:lambda
 
       - name: Package Сlient
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
+          platforms: linux/amd64
+          provenance: false
           context: ./client
           file: ./client/Dockerfile.lambda
           push: true
@@ -258,9 +262,11 @@ jobs:
           output: server/.env
 
       - name: Package Server
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
+          platforms: linux/amd64
+          provenance: false
           context: ./server
           file: ./server/Dockerfile.lambda
           push: true
@@ -281,9 +287,11 @@ jobs:
           output: nestjs/.env
 
       - name: Package Nestjs
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
+          platforms: linux/amd64
+          provenance: false
           context: ./nestjs
           file: ./nestjs/Dockerfile.lambda
           push: true
