--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "ci:build": "tsc",
     "prod": "next start -p 8080",
     "lint": "eslint src",
-    "test": "jest",
-    "test:ci": "jest --ci --reporters=default --reporters=jest-junit",
+    "test": "jest --silent",
+    "test:ci": "jest --ci --reporters=default --reporters=jest-junit --coverage",
     "test:watch": "jest --watch",
     "test:e2e": "npx playwright test",
     "coverage": "jest --coverage"
