--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "start": "next dev",
     "build": "next build",
     "build:lambda": "tsc --esModuleInterop --skipLibCheck --module commonjs --target es2018 --outDir dist lambda/app.ts",
+    "build:analyze": "ANALYZE=1 next build",
     "ci:build": "tsc",
     "prod": "next start -p 8080",
     "lint": "eslint src",
@@ -24,51 +25,51 @@
   },
   "dependencies": {
     "@ant-design/compatible": "5.1.1",
-    "@ant-design/plots": "1.2.2",
-    "antd": "5.1.7",
-    "axios": "0.27.2",
+    "@ant-design/plots": "1.2.5",
+    "antd": "5.3.2",
+    "axios": "1.3.4",
     "cookie": "0.5.0",
     "csvtojson": "2.0.10",
     "dayjs": "1.11.7",
     "lodash": "4.17.21",
-    "next": "13.1.6",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-color": "2.19.3",
     "react-dom": "18.2.0",
-    "react-markdown": "8.0.5",
+    "react-markdown": "8.0.6",
     "react-masonry-css": "1.0.16",
     "react-use": "17.4.0",
     "remark-gfm": "3.0.1",
-    "serverless-http": "3.1.1",
+    "serverless-http": "3.2.0",
     "styled-jsx": "5.1.2",
-    "use-places-autocomplete": "3.0.0"
+    "use-places-autocomplete": "4.0.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.1.6",
-    "@playwright/test": "1.30.0",
+    "@next/bundle-analyzer": "^13.2.4",
+    "@playwright/test": "1.31.2",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
+    "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/aws-lambda": "8.10.110",
+    "@types/aws-lambda": "8.10.111",
     "@types/cookie": "0.5.1",
     "@types/jest": "29.4.0",
     "@types/lodash": "4.14.191",
-    "@types/node": "^18.11.18",
-    "@types/react": "18.0.27",
+    "@types/node": "^18.14.6",
+    "@types/react": "18.0.28",
     "@types/react-color": "2.17.6",
-    "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "5.50.0",
-    "@typescript-eslint/parser": "5.50.0",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
     "dotenv": "16.0.3",
-    "eslint": "8.33.0",
-    "eslint-config-next": "^13.1.6",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jest-dom": "4.0.3",
-    "eslint-plugin-testing-library": "5.10.0",
-    "jest": "29.4.1",
-    "jest-environment-jsdom": "29.4.1",
+    "eslint-plugin-testing-library": "5.10.2",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "jest-junit": "15.0.0",
-    "jest-mock-axios": "4.7.0-beta4",
+    "jest-mock-axios": "4.7.1",
     "mq-polyfill": "1.1.8",
     "typescript": "4.9.5"
   },
