--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ci:format": "prettier --check client server nestjs common setup docs .github",
     "db:restore": "docker exec -i db psql -U rs_master -d rs_school < ./setup/backup-local.sql",
     "db:dump": "PGPASSWORD=12345678 pg_dump -h localhost --username rs_master rs_school --file ./setup/backup-local.sql",
+    "db:dump:win": "pg_dump -h localhost --username rs_master rs_school > ./setup/backup-local.sql",
     "db:up": "docker-compose -f ./setup/docker-compose.yml up  -d",
     "db:down": "docker-compose -f ./setup/docker-compose.yml down"
   },
