feat: implement solutions urls download

--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -35,6 +35,7 @@
     "@nestjs/schedule": "2.1.0",
     "@nestjs/swagger": "6.1.2",
     "@nestjs/typeorm": "9.0.1",
+    "@types/json2csv": "5.0.3",
     "@vendia/serverless-express": "4.10.1",
     "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
@@ -45,6 +46,7 @@
     "express": "4.18.1",
     "handlebars": "4.7.7",
     "ical-generator": "3.5.1",
+    "json2csv": "5.0.3",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
