Implement solutions urls CVS download (#2029)
* feat: implement solutions urls download

* review: resolve concerns

--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -45,6 +45,7 @@
     "express": "4.18.1",
     "handlebars": "4.7.7",
     "ical-generator": "3.5.1",
+    "json2csv": "5.0.3",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
@@ -72,6 +73,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "29.0.0",
     "@types/jsonwebtoken": "8.5.8",
+    "@types/json2csv": "5.0.3",
     "@types/lodash": "4.14.184",
     "@types/node": "16.11.52",
     "@types/passport-github2": "1.2.5",
