--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -25,76 +25,77 @@
   },
   "dependencies": {
     "@apalchys/pino-cloudwatch": "0.8.6",
-    "@nestjs/axios": "0.1.0",
-    "@nestjs/common": "9.0.11",
-    "@nestjs/config": "2.2.0",
-    "@nestjs/core": "9.0.11",
-    "@nestjs/mapped-types": "1.1.0",
-    "@nestjs/passport": "9.0.0",
-    "@nestjs/platform-express": "9.0.11",
-    "@nestjs/schedule": "2.1.0",
-    "@nestjs/swagger": "6.1.2",
+    "@nestjs/axios": "2.0.0",
+    "@nestjs/common": "9.3.9",
+    "@nestjs/config": "2.3.1",
+    "@nestjs/core": "9.3.9",
+    "@nestjs/mapped-types": "1.2.2",
+    "@nestjs/passport": "9.0.3",
+    "@nestjs/platform-express": "9.3.9",
+    "@nestjs/schedule": "2.2.0",
+    "@nestjs/swagger": "6.2.1",
     "@nestjs/typeorm": "9.0.1",
     "@vendia/serverless-express": "4.10.1",
-    "cache-manager": "4.1.0",
+    "axios": "1.3.4",
+    "cache-manager": "5.1.7",
     "class-transformer": "0.5.1",
-    "class-validator": "0.13.2",
+    "class-validator": "0.14.0",
     "cookie-parser": "1.4.6",
-    "dayjs": "1.11.5",
-    "dotenv": "16.0.1",
-    "express": "4.18.1",
+    "dayjs": "1.11.7",
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
     "handlebars": "4.7.7",
-    "ical-generator": "3.5.1",
+    "ical-generator": "3.6.1",
     "json2csv": "5.0.3",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
-    "nestjs-pino": "3.1.1",
+    "nestjs-pino": "3.1.2",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
     "passport-http": "0.3.0",
-    "passport-jwt": "4.0.0",
-    "pg": "8.8.0",
-    "pino-http": "8.2.0",
+    "passport-jwt": "4.0.1",
+    "pg": "8.9.0",
+    "pino-http": "8.3.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.6",
-    "swagger-ui-express": "4.5.0",
+    "rxjs": "7.8.0",
+    "swagger-ui-express": "4.6.1",
     "typeorm": "0.3.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "9.0.0",
-    "@nestjs/schematics": "9.0.1",
-    "@nestjs/testing": "9.0.11",
+    "@nestjs/cli": "9.2.0",
+    "@nestjs/schematics": "9.0.4",
+    "@nestjs/testing": "9.3.9",
     "@openapitools/openapi-generator-cli": "2.5.2",
-    "@types/cache-manager": "4.0.1",
+    "@types/cache-manager": "4.0.2",
     "@types/cookie-parser": "1.4.3",
-    "@types/express": "4.17.13",
-    "@types/jest": "29.0.0",
-    "@types/jsonwebtoken": "8.5.8",
+    "@types/express": "4.17.17",
+    "@types/jest": "29.4.0",
     "@types/json2csv": "5.0.3",
-    "@types/lodash": "4.14.184",
+    "@types/jsonwebtoken": "9.0.1",
+    "@types/lodash": "4.14.191",
     "@types/node": "16.11.52",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
-    "@types/passport-jwt": "3.0.6",
+    "@types/passport-jwt": "3.0.8",
     "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "eslint": "8.23.0",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "eslint": "8.35.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.0.3",
-    "jest-junit": "14.0.1",
-    "pino-pretty": "9.0.1",
-    "prettier": "2.7.1",
-    "supertest": "6.2.4",
-    "ts-jest": "29.0.0",
-    "ts-loader": "9.3.1",
+    "jest": "^29.4.3",
+    "jest-junit": "15.0.0",
+    "pino-pretty": "9.4.0",
+    "prettier": "2.8.4",
+    "supertest": "6.3.3",
+    "ts-jest": "29.0.5",
+    "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "4.8.3"
+    "typescript": "4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
