--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -65,6 +65,7 @@
     "typeorm": "0.3.14"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "3.335.0",
     "@nestjs/cli": "9.3.0",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.9",
