--- a/client/Dockerfile.lambda
+++ b/client/Dockerfile.lambda
@@ -1,4 +1,6 @@
-FROM node:14-bullseye-slim as builder
+FROM node:18-bullseye-slim as builder
+
+ENV NEXT_RUNTIME nodejs
 
 WORKDIR /container_out
 
@@ -19,10 +21,11 @@ COPY dist .
 COPY .next .next
 
 # Lambda Container
-FROM public.ecr.aws/lambda/nodejs:14
+FROM public.ecr.aws/lambda/nodejs:18
 
 ENV NODE_ENV production
 ENV TZ utc
+ENV NEXT_RUNTIME nodejs
 
 WORKDIR /var/task
 
