--- a/nestjs/Dockerfile.lambda
+++ b/nestjs/Dockerfile.lambda
@@ -16,6 +16,7 @@ FROM public.ecr.aws/lambda/nodejs:14
 ENV NODE_ENV production
 ENV TZ utc
 ENV AWS_LAMBDA true
+ENV RS_ENV staging
 
 WORKDIR /var/task
 
