feat: unify env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,10 @@ services:
       RSSHCOOL_API_AUTH_CLIENT_SECRET: ${RSSHCOOL_API_AUTH_CLIENT_SECRET}
       RSSHCOOL_API_AUTH_SUCCESS_REDIRECT: ${RSSHCOOL_API_AUTH_SUCCESS_REDIRECT}
       RSSHCOOL_API_SESSION_KEY: ${RSSHCOOL_API_SESSION_KEY}
-      RSSHCOOL_API_PG_HOST: ${RSSHCOOL_API_PG_HOST}
-      RSSHCOOL_API_PG_USERNAME: ${RSSHCOOL_API_PG_USERNAME}
-      RSSHCOOL_API_PG_PASSWORD: ${RSSHCOOL_API_PG_PASSWORD}
-      RSSHCOOL_API_PG_DATABASE: ${RSSHCOOL_API_PG_DATABASE}
+      RSSHCOOL_PG_HOST: ${RSSHCOOL_PG_HOST}
+      RSSHCOOL_PG_USERNAME: ${RSSHCOOL_PG_USERNAME}
+      RSSHCOOL_PG_PASSWORD: ${RSSHCOOL_PG_PASSWORD}
+      RSSHCOOL_PG_DATABASE: ${RSSHCOOL_PG_DATABASE}
       RSSHCOOL_API_ADMIN_USERNAME: ${RSSHCOOL_API_ADMIN_USERNAME}
       RSSHCOOL_API_ADMIN_PASSWORD: ${RSSHCOOL_API_ADMIN_PASSWORD}
       RSSHCOOL_API_INTEGRATIONS_DISCORD_GRATITUDE_URL: ${RSSHCOOL_API_INTEGRATIONS_DISCORD_GRATITUDE_URL}
@@ -56,10 +56,10 @@ services:
       - 8082:8080
     environment:
       RSSHCOOL_HOST: ${RS_HOST}
-      RSSHCOOL_PG_HOST: ${RSSHCOOL_API_PG_HOST}
-      RSSHCOOL_PG_USERNAME: ${RSSHCOOL_API_PG_USERNAME}
-      RSSHCOOL_PG_PASSWORD: ${RSSHCOOL_API_PG_PASSWORD}
-      RSSHCOOL_PG_DATABASE: ${RSSHCOOL_API_PG_DATABASE}
+      RSSHCOOL_PG_HOST: ${RSSHCOOL_PG_HOST}
+      RSSHCOOL_PG_USERNAME: ${RSSHCOOL_PG_USERNAME}
+      RSSHCOOL_PG_PASSWORD: ${RSSHCOOL_PG_PASSWORD}
+      RSSHCOOL_PG_DATABASE: ${RSSHCOOL_PG_DATABASE}
       RSSHCOOL_USERS_ADMINS: 'apalchys,dzmitry-varabei,mikhama,sonejka,aaliakseyenka,valerydluski'
       RSSHCOOL_USERS_HIRERS: ${RSSHCOOL_USERS_HIRERS}
       RSSHCOOL_AUTH_GITHUB_CALLBACK: ${RSSHCOOL_API_AUTH_CALLBACK}
