Update sdk version (#2167)
* chore: use aws sdk v3

* chore: fix codestyle

* chore: replace S3Client with S3

* chore: put sdk package to prod deps

--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@apalchys/pino-cloudwatch": "0.8.6",
+    "@aws-sdk/client-s3": "3.335.0",
     "@nestjs/axios": "2.0.0",
     "@nestjs/common": "9.3.9",
     "@nestjs/config": "2.3.1",
