--- a/server/package.json
+++ b/server/package.json
@@ -68,12 +68,13 @@
     "@typescript-eslint/parser": "5.33.1",
     "cross-env": "7.0.3",
     "eslint": "8.22.0",
+    "eslint-config-turbo": "^1.9.9",
     "jest": "28.1.3",
     "jest-junit": "13.0.0",
     "pino-pretty": "7.5.1",
     "ts-jest": "28.0.8",
-    "ts-node-dev": "2.0.0",
     "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.1.0",
     "typescript": "4.5.5"
   },
