--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,9 +14,9 @@ jobs:
   deploy_build_client:
     name: Build (Client)
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./client
+    # defaults:
+    #   run:
+    #     working-directory: ./client
     steps:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
@@ -26,32 +26,47 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Restore next cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-next
-        with:
-          path: client/.next/cache/
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
+      # - name: Restore next cache
+      #   uses: actions/cache@v2
+      #   env:
+      #     cache-name: cache-next
+      #   with:
+      #     path: client/.next/cache/
+      #     key: ${{ runner.os }}-${{ env.cache-name }}-${{ github.sha }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-${{ env.cache-name }}-
 
-      - name: Restore npm cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-npm
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
-            ${{ runner.os }}-
+      # - name: Restore npm cache
+      #   uses: actions/cache@v2
+      #   env:
+      #     cache-name: cache-npm
+      #   with:
+      #     path: ~/.npm
+      #     key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-${{ env.cache-name }}-
+      #       ${{ runner.os }}-
+
+      - name: Install turbo
+        run: npm install turbo --global
+
+      - name: Generate a isolated subworkspace for Client
+        run: turbo prune --scope=client --docker
+
+      - name: Add lockfile and package.json's and source of isolated subworkspace
+        run: |
+          cp -r out/json/ app
+          cp -r out/package-lock.json app
+          cp -r out/full/ app
+          cp -r common app/common
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./app
 
       - name: Test (npm test)
         run: npm test
+        working-directory: ./app
 
       - name: Build (npm run build)
         env:
@@ -59,9 +74,11 @@ jobs:
           RSSHCOOL_UI_GCP_MAPS_API_KEY: ${{ secrets.RSSHCOOL_UI_GCP_MAPS_API_KEY }}
           CDN_HOST: 'https://cdn.rs.school'
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+        working-directory: ./app
         run: npm run build
 
       - name: Clean modules
+        working-directory: ./app
         run: npm prune --production
 
       - name: Upload to CDN
@@ -69,10 +86,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
           AWS_DEFAULT_REGION: eu-central-1
-        run: aws s3 cp .next/static s3://cdn.rs.school/_next/static/ --recursive --cache-control "public,max-age=15552000,immutable"
+        run: aws s3 cp ./app/apps/client/.next/static s3://cdn.rs.school/_next/static/ --recursive --cache-control "public,max-age=15552000,immutable"
 
       - name: Build container
-        run: docker build -t ghcr.io/rolling-scopes/rsschool-app-client:master .
+        run: docker build -t ghcr.io/rolling-scopes/rsschool-app-client:master -f apps/client/Dockerfile ./app
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
