--- a/server/Dockerfile.lambda
+++ b/server/Dockerfile.lambda
@@ -1,15 +1,17 @@
-FROM node:14-bullseye-slim as builder
+FROM node:18-bullseye-slim as builder
 
 WORKDIR /container_out
 
-COPY tsconfig.json tsconfig.json
-COPY .env .env
 COPY package.json package.json
 COPY package-lock.json package-lock.json
+COPY server/tsconfig.json server/tsconfig.json
+COPY server/.env server/.env
+COPY server/package.json server/package.json
+
 RUN npm ci --production --no-optional
 
-COPY lambda /container_out
-COPY dist /container_out
+COPY server/lambda server/
+COPY server/dist server/
 
 # Lambda Container
 FROM public.ecr.aws/lambda/nodejs:14
@@ -18,8 +20,6 @@ ENV NODE_ENV production
 ENV TZ utc
 ENV RS_ENV staging
 
-WORKDIR /var/task
+COPY --from=builder /container_out /var/task/
 
-COPY --from=builder /container_out .
-
-CMD [ "app.handler" ]
+CMD [ "/var/task/server/app.handler" ]
