--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,18 +5,18 @@ EXPOSE 8080
 ENV NODE_ENV production
 ENV NODE_PORT 8080
 
-WORKDIR /client
+WORKDIR /app
 
-COPY apps/client/next.config.js /client/apps/client/next.config.js
-COPY apps/client/next.config.prod.js /client/apps/client/next.config.prod.js
-COPY apps/client/package.json /client/apps/client/package.json
-COPY apps/client/public /client/apps/client/public
+COPY client/next.config.js /app/client/next.config.js
+COPY client/next.config.prod.js /app/client/next.config.prod.js
+COPY client/package.json /app/client/package.json
+COPY client/public /app/client/public
 
-COPY package.json /client
-COPY package-lock.json /client
+COPY package.json /app
+COPY package-lock.json /app
 
 RUN npm ci --production --no-optional
 
-COPY apps/client/.next /client/apps/client/.next
+COPY client/.next /app/client/.next
 
-CMD cd /client/apps/client && npm run prod
+CMD cd /app/client && npm run prod
